# triCOG

./: CMakeLists.txt  DEVELOPMENT.md  README.md  environment_triCOG.yml  setup_compilation.sh  triCOG.py
COGlse/: lse.py
COGprocessinput/: extract_org.py  map_prot2org.py  read_q2s.py  readblast.py
COGtriangle/: CMakeLists.txt  bindings.cpp  cogmaker.cpp  cogmaker.h
COGtriangle/python/: cogtriangles.py  data_converter.py  process_output.py  read_input.py
tests/: test_full_run.py
tests/COGlse/: test_lse_match.py
tests/COGprocessinput/: test_extract_organism.py  test_prot2org.py  test_readblast.py
tests/COGtriangle/C++/: test_cogmaker.cpp
tests/COGtriangle/integration/: test_integration.py
tests/COGtriangle/integration/data/: hits.csv  lse.csv  original_result.csv  prot2len.csv  prot2org.csv  query2subject.tsv
tests/COGtriangle/integration/output/: all_edges.csv  cog_edges.csv  legacy_output.csv
tests/COGtriangle/python/: test_data_converter.py  test_process_output.py  test_read_input.py
tests/testdata/: accession_numbers.txt
tests/testdata/TenPhages/: TenPhages.job.csv  TenPhages.p2o.csv  base_output.csv  cls.csv  lse.csv
tests/testdata/TenPhages/BLASTconv/: hash.csv  hits.csv  orgbyfile_prot2org.csv  prot2org.csv  query2subject.csv  self.csv
tests/testdata/TenPhages/BLASTff/: TenPhages.tab
tests/testdata/ThreeByThree/: GenThree.job.csv  GenThree.p2o.csv  base_output.csv  lse.csv
tests/testdata/herpes/: base_output.csv  cls.csv  herpes.job.csv  herpes.p2o.csv  lse.csv
tests/testdata/herpes/BLASTconv/: hash.csv  (+3 more)
utils/: logging_config.py
(+52 files in other folders)
